# ChangeLog for rox-base/pager
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/rox-base/pager/ChangeLog,v 1.23 2011/03/21 22:34:04 nirbheek Exp $

  21 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org> pager-1.1-r2.ebuild:
  Fix slot-deps on gnome libs

  06 Sep 2008; Jim Ramsay <lack@gentoo.org> -pager-1.1-r1.ebuild:
  Version cleanup

  01 Sep 2008; Raúl Porcel <armin76@gentoo.org> pager-1.1-r2.ebuild:
  sparc stable wrt #236057

  30 Aug 2008; Markus Meier <maekke@gentoo.org> pager-1.1-r2.ebuild:
  x86 stable, bug #236057

  28 Aug 2008; Jim Ramsay <lack@gentoo.org> pager-1.1-r2.ebuild:
  Marking stable on amd64

*pager-1.1-r2 (15 Jan 2008)

  15 Jan 2008; Jim Ramsay <lack@gentoo.org> +pager-1.1-r2.ebuild:
  Added 0install feed support

  29 Nov 2007; Jim Ramsay <lack@gentoo.org> -pager-1.0.1-r1.ebuild:
  Version cleanup

  15 Nov 2007; Samuli Suominen <drac@gentoo.org> pager-1.1-r1.ebuild:
  amd64 stable wrt #197514

  30 Oct 2007; Ferris McCormick <fmccor@gentoo.org> pager-1.1-r1.ebuild:
  Add ~sparc (bookkeeping) --- rox-pager works.

  10 Jun 2007; Jim Ramsay <lack@gentoo.org> pager-1.0.1-r1.ebuild,
  pager-1.1-r1.ebuild:
  Adding ~amd64 to rox-base/pager

  09 Feb 2007; Christian Faulhammer <opfer@gentoo.org> pager-1.1-r1.ebuild:
  stable x86; bug #165956

*pager-1.1-r1 (09 Feb 2007)
*pager-1.0.1-r1 (09 Feb 2007)

  09 Feb 2007; Jim Ramsay <lack@gentoo.org> -pager-1.0.1.ebuild,
  +pager-1.0.1-r1.ebuild, -pager-1.1.ebuild, +pager-1.1-r1.ebuild:
  Fixed filename collision with x11-wm/afterstep (Bug 165956)

*pager-1.1 (27 Nov 2006)

  27 Nov 2006; Jim Ramsay <lack@gentoo.org> +pager-1.1.ebuild:
  Version bump, Pager-1.1 is released

  20 Nov 2006; Christian Faulhammer <opfer@gentoo.org> pager-1.0.1.ebuild:
  stable x86, bug #155521

  15 Nov 2006; Jim Ramsay <lack@gentoo.org> pager-1.0.1.ebuild:
  Added missing pkgconfig dependency

  01 Nov 2006; Jim Ramsay <lack@gentoo.org> metadata.xml: