@@ -1,6 +1,9 @@
 # ChangeLog for rox-base/pager
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/rox-base/pager/ChangeLog,v 1.23 2011/03/21 22:34:04 nirbheek Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/rox-base/pager/ChangeLog,v 1.24 2012/05/03 04:40:44 jdhore Exp $
+
+  03 May 2012; Jeff Horelick <jdhore@gentoo.org> pager-1.1-r2.ebuild:
+  dev-util/pkgconfig -> virtual/pkgconfig
 
   21 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org> pager-1.1-r2.ebuild:
   Fix slot-deps on gnome libs
